--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -2,6 +2,8 @@
 <html lang="it" class="dark protocol-forced-dark">
 
 <head>
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Codici & Password - Password Dimenticata</title>
@@ -14,13 +16,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+    <link rel="stylesheet" href="assets/css/fonts.css">
     <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
@@ -29,61 +25,65 @@
     <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
 </head>
 
-<body class="base-bg overflow-x-hidden p-4 flex items-center justify-center min-h-screen">
+<body class="base-bg overflow-x-hidden">
+    <!-- 1. WRAPPER PRINCIPALE (UI come index.html) -->
+    <div class="base-container flex items-center justify-center p-4 w-full relative" style="min-height: 100vh;">
 
-    <!-- 1. VAULT CONTAINER (Standard PROTOCOLLO BASE) -->
-    <div class="base-vault w-full max-w-md relative z-10 py-8">
+        <!-- 2. FARO (Glow Effect) -->
+        <div class="base-glow"></div>
 
-        <!-- Card Reset -->
-        <div class="auth-card border-glow">
-            <!-- SAETTA MASTER ANIMATION -->
-            <div class="saetta-master"></div>
-            <div class="saetta-drop"></div>
+        <!-- 3. VAULT CONTAINER -->
+        <div class="base-vault w-full max-w-md relative z-10 py-8">
 
+            <!-- Card Reset -->
+            <div class="auth-card border-glow">
+                <!-- SAETTA MASTER ANIMATION -->
+                <div class="saetta-master"></div>
+                <div class="saetta-drop"></div>
 
-
-            <!-- Icona Centrale -->
-            <div class="auth-icon-box">
-                <span class="material-symbols-outlined">lock_reset</span>
-            </div>
-
-            <!-- Titoli -->
-            <h1 class="auth-title" data-t="reset_page_title">Recupera Password</h1>
-            <p class="auth-subtitle" data-t="reset_hint">Riceverai un link di ripristino</p>
-
-            <!-- Form Recupero -->
-            <form id="reset-form">
-
-                <!-- Email -->
-                <div class="auth-form-group">
-                    <label class="auth-label" data-t="email_address_label">Email dell'account</label>
-                    <input id="email" name="email" type="email" autocomplete="email" required class="auth-input"
-                        data-t-placeholder="email_placeholder" placeholder="mario.rossi@email.com">
+                <!-- Icona Centrale -->
+                <div class="auth-icon-box">
+                    <span class="material-symbols-outlined">lock_reset</span>
                 </div>
 
-                <!-- Submit Button -->
-                <button type="submit" id="reset-submit-btn" class="auth-btn-primary" data-t="send_instructions_btn">
-                    <span class="material-symbols-outlined text-20">send</span>
-                    Invia email
-                </button>
+                <!-- Titoli -->
+                <h1 class="auth-title" data-t="reset_page_title">Recupera Password</h1>
+                <p class="auth-subtitle" data-t="reset_hint">Riceverai un link di ripristino</p>
 
-            </form>
+                <!-- Form Recupero -->
+                <form id="reset-form">
 
-            <!-- Back Link -->
-            <div style="margin-top: 2rem; text-align: center;">
-                <a href="index.html" class="link-register"
-                    style="display: inline-flex; align-items: center; justify-content: center; color: rgba(255,255,255,0.6);"
-                    data-t="back_to_login_link">
-                    <span class="material-symbols-outlined text-16" style="margin-right: 0.5rem;">arrow_back</span>
-                    Torna al Login
-                </a>
+                    <!-- Email -->
+                    <div class="auth-form-group">
+                        <label class="auth-label" data-t="email_address_label">Email dell'account</label>
+                        <input id="email" name="email" type="email" autocomplete="email" required class="auth-input"
+                            data-t-placeholder="email_placeholder" placeholder="mario.rossi@email.com">
+                    </div>
+
+                    <!-- Submit Button -->
+                    <button type="submit" id="reset-submit-btn" class="auth-btn-primary" data-t="send_instructions_btn">
+                        <span class="material-symbols-outlined text-20">send</span>
+                        Invia email
+                    </button>
+
+                </form>
+
+                <!-- Back Link -->
+                <div style="margin-top: 2rem; text-align: center;">
+                    <a href="index.html" class="link-register"
+                        style="display: inline-flex; align-items: center; justify-content: center; color: rgba(255,255,255,0.6);"
+                        data-t="back_to_login_link">
+                        <span class="material-symbols-outlined text-16" style="margin-right: 0.5rem;">arrow_back</span>
+                        Torna al Login
+                    </a>
+                </div>
+
+                <!-- Footer Legale -->
+                <div class="legal-footer">
+                    <span class="opacity-50">&copy; 2026</span>
+                </div>
+
             </div>
-
-            <!-- Footer Legale -->
-            <div class="legal-footer">
-                <span class="opacity-50">&copy; 2026</span>
-            </div>
-
         </div>
     </div>
 
