--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -2,6 +2,7 @@
 <html lang="it">
 
 <head>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Home - PROTOCOLLO BASE</title>
@@ -10,13 +11,8 @@
   <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
 
   <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
-  <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
+  <link rel="stylesheet" href="assets/css/fonts.css">
+    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
   <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
   <!-- CORE JS -->
@@ -31,7 +27,8 @@
     <!-- HEADER FISSO -->
     <header class="base-header">
       <div class="header-balanced-container">
-        <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
+        <link rel="stylesheet" href="assets/css/fonts.css">
+    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
         <div class="header-left">
           <a href="profilo_privato.html" class="avatar-header-link">
             <div id="header-user-avatar" class="header-avatar-box">
@@ -136,3 +133,7 @@
 </body>
 
 </html>
+
+
+
+
