--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -2,6 +2,8 @@
 <html lang="it" class="dark protocol-forced-dark">
 
 <head>
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Codici & Password - Nuova Password</title>
@@ -14,13 +16,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+    <link rel="stylesheet" href="assets/css/fonts.css">
     <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
@@ -29,74 +25,78 @@
     <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
 </head>
 
-<body class="base-bg">
+<body class="base-bg overflow-x-hidden">
+    <!-- 1. WRAPPER PRINCIPALE (UI come index.html) -->
+    <div class="base-container flex items-center justify-center p-4 w-full relative" style="min-height: 100vh;">
 
-    <div class="base-container">
-
-        <!-- Scenografia -->
+        <!-- 2. FARO (Glow Effect) -->
         <div class="base-glow"></div>
 
-        <!-- Card Nuova Password -->
-        <div class="auth-card border-glow">
-            <!-- SAETTA MASTER ANIMATION -->
-            <div class="saetta-master"></div>
-            <div class="saetta-drop"></div>
+        <!-- 3. VAULT CONTAINER -->
+        <div class="base-vault w-full max-w-md relative z-10 py-8">
+
+            <!-- Card Nuova Password -->
+            <div class="auth-card border-glow">
+                <!-- SAETTA MASTER ANIMATION -->
+                <div class="saetta-master"></div>
+                <div class="saetta-drop"></div>
 
 
-            <!-- Icona Centrale -->
-            <div class="auth-icon-box">
-                <span class="material-symbols-outlined">vpn_key</span>
-            </div>
+                <!-- Icona Centrale -->
+                <div class="auth-icon-box">
+                    <span class="material-symbols-outlined">vpn_key</span>
+                </div>
 
-            <!-- Titoli -->
-            <h1 class="auth-title" data-t="set_password_page_title">Nuova Password</h1>
-            <p class="auth-subtitle" data-t="password_req_title">Scegli una password sicura</p>
+                <!-- Titoli -->
+                <h1 class="auth-title" data-t="set_password_page_title">Nuova Password</h1>
+                <p class="auth-subtitle" data-t="password_req_title">Scegli una password sicura</p>
 
-            <!-- Form Salvataggio -->
-            <form id="new-password-form">
+                <!-- Form Salvataggio -->
+                <form id="new-password-form">
 
-                <!-- Nuova Password -->
-                <div class="auth-form-group">
-                    <label class="auth-label" data-t="new_password">Nuova Password</label>
-                    <div class="password-wrapper">
-                        <input id="new-password" name="new-password" type="password" autocomplete="new-password"
-                            required class="auth-input" data-t-placeholder="password_placeholder_reg"
-                            placeholder="********">
-                        <button type="button" class="toggle-password" id="btn-toggle-password"
-                            aria-label="Mostra Password">
-                            <span class="material-symbols-outlined">visibility</span>
-                        </button>
+                    <!-- Nuova Password -->
+                    <div class="auth-form-group">
+                        <label class="auth-label" data-t="new_password">Nuova Password</label>
+                        <div class="password-wrapper">
+                            <input id="new-password" name="new-password" type="password" autocomplete="new-password"
+                                required class="auth-input" data-t-placeholder="password_placeholder_reg"
+                                placeholder="********">
+                            <button type="button" class="toggle-password" id="btn-toggle-password"
+                                aria-label="Mostra Password">
+                                <span class="material-symbols-outlined">visibility</span>
+                            </button>
+                        </div>
                     </div>
+
+                    <!-- Conferma Password -->
+                    <div class="auth-form-group">
+                        <label class="auth-label" data-t="confirm_new_password">Conferma Password</label>
+                        <input id="confirm-password" name="confirm-password" type="password" autocomplete="new-password"
+                            required class="auth-input" placeholder="********">
+                    </div>
+
+                    <!-- Submit Button -->
+                    <button type="submit" id="new-pass-submit-btn" class="auth-btn-primary" data-t="save_new_pass">
+                        <span class="material-symbols-outlined text-20">save</span>
+                        Salva Password
+                    </button>
+
+                </form>
+
+                <!-- Annulla Link -->
+                <div style="margin-top: 1.5rem; text-align: center;">
+                    <a href="index.html" id="cancel-password-update" class="link-register" style="margin-top: 0;"
+                        data-t="cancel">
+                        Annulla
+                    </a>
                 </div>
 
-                <!-- Conferma Password -->
-                <div class="auth-form-group">
-                    <label class="auth-label" data-t="confirm_new_password">Conferma Password</label>
-                    <input id="confirm-password" name="confirm-password" type="password" autocomplete="new-password"
-                        required class="auth-input" placeholder="********">
+                <!-- Footer Legale -->
+                <div class="legal-footer">
+                    <span class="opacity-50">&copy; 2026</span>
                 </div>
 
-                <!-- Submit Button -->
-                <button type="submit" id="new-pass-submit-btn" class="auth-btn-primary" data-t="save_new_pass">
-                    <span class="material-symbols-outlined text-20">save</span>
-                    Salva Password
-                </button>
-
-            </form>
-
-            <!-- Annulla Link -->
-            <div style="margin-top: 1.5rem; text-align: center;">
-                <a href="index.html" id="cancel-password-update" class="link-register" style="margin-top: 0;"
-                    data-t="cancel">
-                    Annulla
-                </a>
             </div>
-
-            <!-- Footer Legale -->
-            <div class="legal-footer">
-                <span class="opacity-50">&copy; 2026</span>
-            </div>
-
         </div>
     </div>
 
