--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -2,6 +2,8 @@
 <html lang="it" class="dark protocol-forced-dark">
 
 <head>
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codici & Password - Accedi</title>
@@ -10,96 +12,91 @@
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+    <link rel="stylesheet" href="assets/css/fonts.css">
     <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
-    <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.3"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
-</head>
 
-<body class="base-bg overflow-hidden flex items-center justify-center p-4">
-    <!-- 1. VAULT CONTAINER (Standard PROTOCOLLO BASE) -->
-    <div class="base-vault w-full max-w-md relative z-10">
+<body class="base-bg overflow-hidden">
+    <!-- 1. WRAPPER PRINCIPALE (Gestisce lo sfondo e il layout full-page) -->
+    <div class="base-container flex items-center justify-center p-4 w-full h-full relative" style="min-height: 100vh;">
 
-        <!-- Card Login -->
-        <div class="auth-card border-glow">
-            <!-- Language Selector (Anchor to Card) -->
-            <div class="lang-selector-container">
-                <button id="lang-toggle-btn" class="lang-btn" aria-label="Cambia Lingua">
-                    <span class="material-symbols-outlined">language</span>
-                </button>
-                <div id="lang-dropdown" class="lang-dropdown">
-                    <!-- Popolato via JS -->
-                </div>
-            </div>
+        <!-- 2. FARO (Glow Effect - Sfondo luminoso) -->
+        <div class="base-glow"></div>
 
-            <!-- SAETTA MASTER ANIMATION -->
-            <div class="saetta-master"></div>
-            <div class="saetta-drop"></div>
+        <!-- 3. VAULT CONTAINER (Login Content - Sopra il glow) -->
+        <div class="base-vault w-full max-w-md relative z-10">
 
-
-
-            <!-- Icona Centrale -->
-            <div class="auth-icon-box">
-                <span class="material-symbols-outlined">security</span>
-            </div>
-
-            <!-- Titoli -->
-            <h1 class="auth-title" data-t="login_title">Accedi</h1>
-            <p class="auth-subtitle" data-t="login_subtitle">Inserisci le tue credenziali</p>
-
-            <!-- Form Autenticazione -->
-            <form id="login-form">
-
-                <!-- Email / Username -->
-                <div class="auth-form-group">
-                    <label class="auth-label" data-t="username_label">Username</label>
-                    <input id="email" name="username" type="text" autocomplete="username" required class="auth-input"
-                        data-t-placeholder="username_placeholder" placeholder="Email o Username">
+            <!-- Card Login -->
+            <div class="auth-card border-glow">
+                <!-- Language Selector (Anchor to Card) -->
+                <div class="lang-selector-container">
+                    <button id="lang-toggle-btn" class="lang-btn" aria-label="Cambia Lingua">
+                        <span class="material-symbols-outlined">language</span>
+                    </button>
+                    <div id="lang-dropdown" class="lang-dropdown">
+                        <!-- Popolato via JS -->
+                    </div>
                 </div>
 
-                <!-- Password -->
-                <div class="auth-form-group">
-                    <label class="auth-label" data-t="password_label">Password</label>
-                    <div class="password-wrapper">
-                        <input id="password" name="password" type="password" autocomplete="current-password" required
-                            class="auth-input" placeholder="********">
-                        <button type="button" class="toggle-password" id="btn-toggle-password"
-                            aria-label="Mostra Password">
-                            <span class="material-symbols-outlined">visibility</span>
-                        </button>
+                <!-- SAETTA MASTER ANIMATION -->
+                <div class="saetta-master"></div>
+                <div class="saetta-drop"></div>
+
+                <!-- Icona Centrale -->
+                <div class="auth-icon-box">
+                    <span class="material-symbols-outlined">security</span>
+                </div>
+
+                <!-- Titoli -->
+                <h1 class="auth-title" data-t="login_title">Accedi</h1>
+                <p class="auth-subtitle" data-t="login_subtitle">Inserisci le tue credenziali</p>
+
+                <!-- Form Autenticazione -->
+                <form id="login-form">
+
+                    <!-- Email / Username -->
+                    <div class="auth-form-group">
+                        <label class="auth-label" data-t="username_label">Username</label>
+                        <input id="email" name="username" type="text" autocomplete="username" required
+                            class="auth-input" data-t-placeholder="username_placeholder" placeholder="Email o Username">
                     </div>
 
-                    <a href="reset_password.html" id="link-forgot-password" class="link-forgot"
-                        data-t="forgot_password">Password dimenticata?</a>
+                    <!-- Password -->
+                    <div class="auth-form-group">
+                        <label class="auth-label" data-t="password_label">Password</label>
+                        <div class="password-wrapper">
+                            <input id="password" name="password" type="password" autocomplete="current-password"
+                                required class="auth-input" placeholder="********">
+                            <button type="button" class="toggle-password" id="btn-toggle-password"
+                                aria-label="Mostra Password">
+                                <span class="material-symbols-outlined">visibility</span>
+                            </button>
+                        </div>
+
+                        <a href="reset_password.html" id="link-forgot-password" class="link-forgot"
+                            data-t="forgot_password">Password dimenticata?</a>
+                    </div>
+
+                    <!-- Submit Button -->
+                    <button type="submit" id="login-submit-btn" class="auth-btn-primary" data-t="auth_button">
+                        <span class="material-symbols-outlined text-20">login</span>
+                        Accedi
+                    </button>
+
+                </form>
+
+                <!-- Registrazione Link -->
+                <a href="registrati.html" class="link-register" data-t="register_link">
+                    Registrazione nuovo utente
+                </a>
+
+                <!-- Footer Legale -->
+                <div class="legal-footer">
+                    <span class="opacity-50">&copy; 2026</span>
                 </div>
 
-                <!-- Submit Button -->
-                <button type="submit" id="login-submit-btn" class="auth-btn-primary" data-t="auth_button">
-                    <span class="material-symbols-outlined text-20">login</span>
-                    Accedi
-                </button>
-
-            </form>
-
-            <!-- Registrazione Link -->
-            <a href="registrati.html" class="link-register" data-t="register_link">
-                Registrazione nuovo utente
-            </a>
-
-            <!-- Footer Legale -->
-            <div class="legal-footer">
-                <span class="opacity-50">&copy; 2026</span>
             </div>
-
         </div>
     </div>
 
@@ -108,5 +105,3 @@
     <script type="module" src="assets/js/login.js?v=3.3"></script>
 
 </body>
-
-</html>
