--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -2,6 +2,8 @@
 <html lang="it" class="dark protocol-forced-dark">
 
 <head>
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Codici & Password - Registrazione</title>
@@ -14,117 +16,116 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+    <link rel="stylesheet" href="assets/css/fonts.css">
     <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
-
     <!-- CORE JS -->
     <script src="assets/js/core.js?v=3.3"></script>
     <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
 </head>
 
-<body class="base-bg overflow-x-hidden p-4 flex items-center justify-center min-h-screen">
-    <!-- 1. VAULT CONTAINER (Standard PROTOCOLLO BASE) -->
-    <div class="base-vault w-full max-w-md relative z-10 py-8">
+<body class="base-bg overflow-x-hidden">
+    <!-- 1. WRAPPER PRINCIPALE (UI come index.html) -->
+    <div class="base-container flex items-center justify-center p-4 w-full relative" style="min-height: 100vh;">
 
-        <!-- Card Registrazione -->
-        <div class="auth-card border-glow">
-            <!-- Language Selector (Anchor to Card) -->
-            <div class="lang-selector-container">
-                <button id="lang-toggle-btn" class="lang-btn" aria-label="Cambia Lingua">
-                    <span class="material-symbols-outlined">language</span>
-                </button>
-                <div id="lang-dropdown" class="lang-dropdown">
-                    <!-- Popolato via JS -->
+        <!-- 2. FARO (Glow Effect) -->
+        <div class="base-glow"></div>
+
+        <!-- 3. VAULT CONTAINER -->
+        <div class="base-vault w-full max-w-md relative z-10 py-8">
+
+            <!-- Card Registrazione -->
+            <div class="auth-card border-glow">
+                <!-- Language Selector (Anchor to Card) -->
+                <div class="lang-selector-container">
+                    <button id="lang-toggle-btn" class="lang-btn" aria-label="Cambia Lingua">
+                        <span class="material-symbols-outlined">language</span>
+                    </button>
+                    <div id="lang-dropdown" class="lang-dropdown">
+                        <!-- Popolato via JS -->
+                    </div>
                 </div>
-            </div>
 
-            <!-- SAETTA MASTER ANIMATION -->
-            <div class="saetta-master"></div>
-            <div class="saetta-drop"></div>
+                <!-- SAETTA MASTER ANIMATION -->
+                <div class="saetta-master"></div>
+                <div class="saetta-drop"></div>
 
+                <!-- Icona Centrale -->
+                <div class="auth-icon-box">
+                    <span class="material-symbols-outlined">person_add</span>
+                </div>
 
+                <!-- Titoli -->
+                <h1 class="auth-title" data-t="register_page_title">Registrati</h1>
+                <p class="auth-subtitle" data-t="login_subtitle">Crea il tuo account sicuro</p>
 
-            <!-- Icona Centrale -->
-            <div class="auth-icon-box">
-                <span class="material-symbols-outlined">person_add</span>
-            </div>
+                <!-- Form Registrazione -->
+                <form id="register-form">
 
-            <!-- Titoli -->
-            <h1 class="auth-title" data-t="register_page_title">Registrati</h1>
-            <p class="auth-subtitle" data-t="login_subtitle">Crea il tuo account sicuro</p>
+                    <!-- Nome & Cognome -->
+                    <div class="auth-form-row">
+                        <div class="auth-form-group">
+                            <label class="auth-label" data-t="label_name">Nome</label>
+                            <input id="nome" name="nome" type="text" required class="auth-input" placeholder="Mario">
+                        </div>
+                        <div class="auth-form-group">
+                            <label class="auth-label" data-t="label_surname">Cognome</label>
+                            <input id="cognome" name="cognome" type="text" required class="auth-input"
+                                placeholder="Rossi">
+                        </div>
+                    </div>
 
-            <!-- Form Registrazione -->
-            <form id="register-form">
-
-                <!-- Nome & Cognome -->
-                <div class="auth-form-row">
+                    <!-- Email -->
                     <div class="auth-form-group">
-                        <label class="auth-label" data-t="label_name">Nome</label>
-                        <input id="nome" name="nome" type="text" required class="auth-input" placeholder="Mario">
+                        <label class="auth-label" data-t="email_label">Email</label>
+                        <input id="email" name="email" type="email" autocomplete="username" required class="auth-input"
+                            data-t-placeholder="email_placeholder" placeholder="mario.rossi@email.com">
                     </div>
+
+                    <!-- Password -->
                     <div class="auth-form-group">
-                        <label class="auth-label" data-t="label_surname">Cognome</label>
-                        <input id="cognome" name="cognome" type="text" required class="auth-input" placeholder="Rossi">
+                        <label class="auth-label" data-t="password_label_reg">Password</label>
+                        <div class="password-wrapper">
+                            <input id="password" name="password" type="password" autocomplete="new-password" required
+                                class="auth-input" data-t-placeholder="password_placeholder_reg" placeholder="********">
+                            <button type="button" class="toggle-password" id="btn-toggle-password"
+                                aria-label="Mostra Password">
+                                <span class="material-symbols-outlined">visibility</span>
+                            </button>
+                        </div>
                     </div>
-                </div>
 
-                <!-- Email -->
-                <div class="auth-form-group">
-                    <label class="auth-label" data-t="email_label">Email</label>
-                    <input id="email" name="email" type="email" autocomplete="username" required class="auth-input"
-                        data-t-placeholder="email_placeholder" placeholder="mario.rossi@email.com">
-                </div>
-
-                <!-- Password -->
-                <div class="auth-form-group">
-                    <label class="auth-label" data-t="password_label_reg">Password</label>
-                    <div class="password-wrapper">
-                        <input id="password" name="password" type="password" autocomplete="new-password" required
-                            class="auth-input" data-t-placeholder="password_placeholder_reg" placeholder="********">
-                        <button type="button" class="toggle-password" id="btn-toggle-password"
-                            aria-label="Mostra Password">
-                            <span class="material-symbols-outlined">visibility</span>
-                        </button>
+                    <!-- Conferma Password -->
+                    <div class="auth-form-group">
+                        <label class="auth-label" data-t="confirm_new_password">Conferma Password</label>
+                        <input id="confirm-password" name="confirm-password" type="password" autocomplete="new-password"
+                            required class="auth-input" placeholder="********">
                     </div>
+
+                    <!-- Submit Button -->
+                    <button type="submit" id="register-submit-btn" class="auth-btn-primary" data-t="create_account_btn">
+                        <span class="material-symbols-outlined text-20">check_circle</span>
+                        Nuova registrazione
+                    </button>
+
+                </form>
+
+                <!-- Login Link -->
+                <div style="margin-top: 1.5rem; text-align: center; font-size: 0.9rem; color: rgba(255,255,255,0.6);">
+                    <span data-t="have_account_text">Hai già un account?</span>
+                    <a href="index.html" class="link-register"
+                        style="color: #3b82f6; text-decoration: none; font-weight: 700; margin-left: 0.25rem; display: inline; margin-top: 0;"
+                        data-t="login_now_link">
+                        Accedi ora
+                    </a>
                 </div>
 
-                <!-- Conferma Password -->
-                <div class="auth-form-group">
-                    <label class="auth-label" data-t="confirm_new_password">Conferma Password</label>
-                    <input id="confirm-password" name="confirm-password" type="password" autocomplete="new-password"
-                        required class="auth-input" placeholder="********">
+                <!-- Footer Legale -->
+                <div class="legal-footer">
+                    <span class="opacity-50">&copy; 2026</span>
                 </div>
 
-                <!-- Submit Button -->
-                <button type="submit" id="register-submit-btn" class="auth-btn-primary" data-t="create_account_btn">
-                    <span class="material-symbols-outlined text-20">check_circle</span>
-                    Nuova registrazione
-                </button>
-
-            </form>
-
-            <!-- Login Link -->
-            <div style="margin-top: 1.5rem; text-align: center; font-size: 0.9rem; color: rgba(255,255,255,0.6);">
-                <span data-t="have_account_text">Hai già un account?</span>
-                <a href="index.html" class="link-register"
-                    style="color: #3b82f6; text-decoration: none; font-weight: 700; margin-left: 0.25rem; display: inline; margin-top: 0;"
-                    data-t="login_now_link">
-                    Accedi ora
-                </a>
             </div>
-
-            <!-- Footer Legale -->
-            <div class="legal-footer">
-                <span class="opacity-50">&copy; 2026</span>
-            </div>
-
         </div>
     </div>
 
